# Cxx-programming

./: LICENSE.txt  README.md
chapter_01/examples/: CMakeLists.txt  binforms.cc  check_prime.cc  consteval.cc  fibonacci.cc  gcd.cc  hanoi.cc  hello_qa.cc  iota_lambda.cc  iotaloop.cc  iotaloop2.cc  midpt.cc  min_of_three.cc  namespaces.cc  namespaces2.cc  numsort.cc  pyscope2.py  uniqueptr.cc
chapter_01/solutions/: CMakeLists.txt  check_prime.cc  fibonacci.cc  gcd.cc  iotaloop3.cc  midpt.cc  min_of_three.cc  mysqrt.cc
chapter_02/examples/: collect.cc  desig2.cc  literals.cc  op_overload.cc
chapter_03/examples/: foldex.cc  overload_w_concepts.cc  print_tuple.cc  print_tuple_cxx23.cc  print_tuple_foldex.cc  static_assert0.cc  static_assert1.cc  static_assert2.cc  variadic_1.cc
chapter_05/examples/: CMakeLists.txt  lambda_captures.cc  mutable_lambdas.cc
chapter_06/examples/: K.cc  any_demo.cc  cards_problem.cc  chrono_demo.cc  dangling0.cc  dist.cc  example_text.txt  format1.cc  gerund.cc  iota.cc  normal_distribution.cc  opt_qsolve.cc  pass1.cc  poisson.cc  printablechars.cc  ranges0.cc  seqops.cc  seqops_range.cc  split.cc  strtrans.cc  trig_views.cc  trig_views2.cc  variant_1.cc  variant_2.cc  variant_3.cc  views_and_span.cc  weighted_die.cc  word_count.cc  word_count_23.cc  word_count_fmt.cc
chapter_06/solutions/: K.cc  normal_distribution.cc  weighted_die.cc
chapter_07/: PolyVal.cc
chapter_07/examples/polymorphic/1_virtual/: CMakeLists.txt  Circle.cc  Polygon.hh
chapter_08/examples/: advent.cc  eratostenes_sieve.cc  hello_m.cc
chapter_08/examples/2_any/with_modules/: CMakeLists.txt
chapter_08/examples/darray_module/: CMakeLists.txt  README.md
chapter_08/examples/saxpy/with_modules/: CMakeLists.txt  README.md
code/bash/: aliases.sh  pathutils.sh
code/include/: CountingIterator.hh  FileAsLines.hh  binform.hh  binform17.hh  cxx20format
day1/examples/: fibonacci.cc  gcd.cc  hanoi.cc  hello_qa.cc  hello_xyz.cc  namespaces.cc  namespaces2.cc  numsort.cc  raw1.cc  rawstring.cc
day1/mine/: datafile.cln  datafile.txt  fibonacci  fibonacci.cc  files  files.cpp  gcd  gcd.cc  hanoi  hello  hello.cc  hello_qa  hello_qa.cc  hello_xyz  namespaces  namespaces2  numsort  numsort.cc  onespace  raw1  (+23 more)
notebooks/: BlocksScopesNamespaces.ipynb  ClassesBasics.ipynb  Containers.ipynb  CtorDtorDemo.ipynb  Functions.ipynb  Fundamentals_1.ipynb  Fundamentals_2.ipynb  STLMisc.ipynb  everyday.ipynb  intro_algorithms.ipynb  lambda_practice_0.ipynb  lambda_practice_1.ipynb
test_your_setup/: README.md  hello_c++23.cc  hello_c++23_m.cc
(+91 files in other folders)
